# bridge_trace

./: .env.example  .gitignore  README.md  pyproject.toml
src/bridgetrace/: __init__.py  config.py  utils.py
src/bridgetrace/analysis/: trace_engine.py
src/bridgetrace/cli/: app.py
src/bridgetrace/core/: scanner.py
src/bridgetrace/models/: graph.py  group.py
src/bridgetrace/parsers/: artifact_parser.py  base.py  json_parser.py  treesitter_parser.py
src/bridgetrace/storage/: group_manager.py  neo4j_client.py
tests/: conftest.py  test_artifact_parser.py  test_cli.py  test_json_parser.py  test_scanner.py  test_trace_engine.py  test_treesitter_parser.py  test_utils.py
